SYSTEM/etc/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Thu Sep 18 02:02:36 2025
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Sep 18 02:02:36 2025
# Generated by iptables-save v1.8.7 on Thu Sep 18 02:02:36 2025
*filter
:INPUT ACCEPT [5853992:11253401240]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5185252:4649268986]
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 92.38.150.138/32 -j DROP
-A INPUT -s 103.8.27.44/32 -j DROP
-A INPUT -s 45.82.78.110/32 -j DROP
-A INPUT -s 45.82.78.111/32 -j DROP
-A INPUT -s 45.82.78.112/32 -j DROP
-A INPUT -s 189.152.138.145/32 -j DROP
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 143.105.141.13/32 -j DROP
-A OUTPUT -d 143.105.141.13/32 -j DROP
COMMIT
# Completed on Thu Sep 18 02:02:36 2025
# Generated by iptables-save v1.8.7 on Thu Sep 18 02:02:36 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-f64e625a4e27 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-f64e625a4e27 -j RETURN
COMMIT
# Completed on Thu Sep 18 02:02:36 2025
